update author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,5 +4,5 @@ original work: https://github.com/nickdesaulniers/bf_interpreter_jit_compiler
 Contributors:
   Jim Huang <jserv.tw@gmail.com>
   Yen-Chin Lee <coldnew.tw@gmail.com>
-  tonyyanxuan <tony0620emma@yahoo.com.tw>
+  Yan-Hsuan Chuang <tony0620emma@yahoo.com.tw>
   Yu-Ju Huang <gic4107@hotmail.com>
